Refactor `ComboService`: optimize material requirement handling, improve pattern matching, and enhance performance with targeted filtering and resource queries.